--- a/index.html
+++ b/index.html
@@ -29,6 +29,55 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
+      <div id="hour00" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0000</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour1" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0100</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour2" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0200</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour3" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0300</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour4" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0400</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour5" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0500</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour6" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">0600</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
       <div id="hour7" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">0700</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -130,6 +179,35 @@
           <i class="fas fa-save" aria-hidden="true"> Save</i>
         </button>
       </div>
+      <div id="hour20" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">2000</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour21" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">2100</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour22" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">2200</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      <div id="hour23" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">2300</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"> Save</i>
+        </button>
+      </div>
+      
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
